force-app/main/default/objects/Form_Template__c/Form_Template__c.object-meta.xml
<CustomObject>
    <description>Plantillas de formulario dinámico para cada tipo de reporte en revisiones de cita de servicio.</description>
    <label>Plantilla de Formulario</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plantillas de Formulario</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>