force-app/main/default/objects/Form_Template__c/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>