force-app/main/default/objects/Form_Template__c/fields/Icono__c.field-meta.xml
<CustomField>
    <fullName>Icono__c</fullName>
    <description>Nombre del ícono SLDS, ej: utility:bucket</description>
    <label>Ícono</label>
    <length>100</length>
    <type>Text</type>
</CustomField>