force-app/main/default/objects/Form_Template__c/fields/ID_Carga_Masiva__c.field-meta.xml
<CustomField>
    <fullName>ID_Carga_Masiva__c</fullName>
    <description>Identificador numérico externo para facilitar cargas masivas desde Data Loader.</description>
    <externalId>true</externalId>
    <label>ID Carga Masiva</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>