force-app/main/default/objects/Form_Template__c/fields/Orden__c.field-meta.xml
<CustomField>
    <fullName>Orden__c</fullName>
    <label>Orden</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>