force-app/main/default/objects/Form_Template__c/fields/Preguntas__c.field-meta.xml
<CustomField>
    <fullName>Preguntas__c</fullName>
    <description>JSON array con la definición de preguntas. Estructura: [{id,label,type,options[],defOn,def}]. Vacío = formulario libre.</description>
    <label>Preguntas</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>