force-app/main/default/objects/Form_Template__c/fields/Tipo_Reporte__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Reporte__c</fullName>
    <description>Debe coincidir exactamente con el valor del picklist Tipo_Reporte__c en Revision_Cita_Servicio__c.</description>
    <externalId>true</externalId>
    <label>Tipo de Reporte</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>