force-app/main/default/objects/Form_Template__c/fields/Zona_de_Servicio_Pyatz__c.field-meta.xml
<CustomField>
    <fullName>Zona_de_Servicio_Pyatz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zona de Servicio Pyatz</label>
    <referenceTo>Zona_Servicio_Pyatz__c</referenceTo>
    <relationshipLabel>Tipo de reporte</relationshipLabel>
    <relationshipName>Plantillas_de_Formulario</relationshipName>
    <type>Lookup</type>
</CustomField>